--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@ h3 {
 }
 
 h1 {
-  padding: 1rem 0;
+  /* padding: 1rem 0; */
   font-size: 5.5rem;
 }
 
@@ -26,21 +26,25 @@ h2 {
 
 @media(max-width: 850px){
   h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   h2 {
-    font-size: 3rem;
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 2.5rem;
   }
 
   .carousel-slider {
-    height: 60vh;
+    height: 100%;
     width: 100%;
     padding: 30px;
   }
 
   .home-div{
-    height: 90vh;
+    height: calc(100vh * 1.3);
     flex-direction: column;
   }
 
